<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="about">About</string>
    <string name="app_theme">Theme</string>
    <string name="help">Help</string>
    <string name="library">Library</string>
    <string name="report_issue">Report Issues</string>
    <string name="presets">Presets</string>
    <string name="sleep_timer">Sleep Timer</string>
    <string name="support_development">Support Development</string>
    <string name="submit_feedback">Submit Feedback</string>
    <string name="intensity">Intensity</string>
    <string name="random_preset_description">The preset will have sounds based on the keywords you choose, and the intense preset will play more sounds together.</string>
    <string name="okay">Okay</string>
    <string name="random_preset">Random Preset</string>
...
    <string name="preset_saved">Awesome! Your preset has been saved.</string>
    <string name="save">Save</string>
    <string name="save_preset">Save Preset</string>
    <string name="play">Play</string>
    <string name="play_pause">play or pause</string>
    <string name="stop">Stop</string>
    <string name="volume">Sound volume</string>
    <string name="add_to_home_screen">Add to home screen</string>
    <string name="delete">Delete</string>
    <string name="open_context_menu">Open context menu</string>
    <string name="preset_delete_confirmation">Are you sure you want to delete "%1$s"? You cannot undo this action.</string>
    <string name="preset_deleted">Your preset has been successfully deleted!</string>
    <string name="preset_does_not_exist">It looks like this preset is no longer available. It may have been deleted.</string>
...
    <string name="notification_channel_default__name">Sound Playback</string>
    <string name="add_to_app_shortcuts">Add to app shortcuts</string>
    <string name="remove_from_app_shortcuts">Remove from app shortcuts</string>
    <string name="app_shortcut_removed">Preset has been removed from app shortcuts!</string>
    <string name="app_shortcut_created">Preset has been added to app shortcuts!</string>
    <string name="app_shortcut_creation_failed">Failed to add the preset to app shortcuts!</string>
    <string name="settings">Settings</string>
    <string name="presets_as_home_screen">Presets as home screen</string>
    <string name="appearance">Appearance</string>
    <string name="sound_fade_in_duration">Sound fade-in duration</string>
    <string name="sound_fade_in_duration_summary">Time duration in seconds for fading-in sounds</string>
    <string name="sound_fade_out_duration">Sound fade-out duration</string>
    <string name="sound_fade_out_duration_summary">Time duration in seconds for fading-out sounds</string>
...
