<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="match_parent">

  <LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:animateLayoutChanges="true"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="@dimen/root_layout_padding">

    <TextView
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:text="@string/wake_up_timer_description"
      android:textAppearance="?attr/textAppearanceBodyMedium" />

    <com.google.android.material.card.MaterialCardView
      android:id="@+id/alarm_info_container"
      style="?attr/materialCardViewFilledStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="24dp"
      app:cardCornerRadius="24dp"
      app:contentPaddingBottom="12dp"
      app:contentPaddingLeft="24dp"
      app:contentPaddingRight="24dp"
      app:contentPaddingTop="12dp"
      app:strokeWidth="0dp">

      <TextView
        android:id="@+id/alarm_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        android:textAppearance="?attr/textAppearanceBodyMedium"
        android:textColor="?attr/colorPrimary"
        app:drawableStartCompat="@drawable/ic_baseline_check_circle_24"
        app:drawableTint="?attr/colorPrimary" />

    </com.google.android.material.card.MaterialCardView>

    <Space
      android:layout_width="match_parent"
      android:layout_height="32dp" />

    <Button
      android:id="@+id/select_preset_button"
      style="?attr/materialButtonOutlinedStyle"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/select_preset"
      app:icon="@drawable/ic_action_expand"
      app:iconGravity="end" />

    <Space
      android:layout_width="match_parent"
      android:layout_height="24dp" />

    <TimePicker
      android:id="@+id/time_picker"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:timePickerMode="spinner" />

    <Space
      android:layout_width="wrap_content"
      android:layout_height="24dp" />

    <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:gravity="center"
      android:orientation="horizontal">

      <Button
        android:id="@+id/reset_time_button"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset" />

      <Space
        android:layout_width="16dp"
        android:layout_height="wrap_content" />

      <Button
        android:id="@+id/set_time_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/schedule" />

    </LinearLayout>

  </LinearLayout>

</ScrollView>
