<?xml version="1.0" encoding="utf-8"?>
<resources>
  <item name="volume_slider" type="id" />
</resources>

